# major_project

./: .gitignore  README.md  app.py  app_multi_class.py  pyproject.toml  requirements.txt
notebooks/: iiot-ids-nbaiot-2-copy.ipynb  iiot-ids-nbaiot-mc-new-diff.ipynb  major-project (2).ipynb
results/: ae_threshold.pkl  autoencoder_ids.keras  cnn_gru_ids.keras  federated_cnn_gru_ids.keras  label_map.pkl  scaler.pkl
results_multi_class/: ae_threshold_mc.pkl  autoencoder_ids_mc.keras  label_map_mc.pkl  le_mc.pkl  model_mc.keras  model_mc_fl.keras  scaler_mc.pkl
text files/: bc.txt
